--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width user-scalable=no">
+    <FONT FACE="courier">
     <title>Metronome commit 9...</title>
     metronome updated 2018 10 21 22:43
 
