made file contents go on bottom

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
       reader.readAsBinaryString(input.files[0]);
   };
 </script>
-  <input type='file' onchange='openFile(event)'><br>
-  <div id='output'>
-    ...
-        </div>
+
     <a href="https://github.com/zoeweinberg/metronome">Zoe's fork on GitHub</a><br>
-    <a href="https://github.com/cwilso/metronome">Fork the original on GitHub</a>
+    <a href="https://github.com/cwilso/metronome">Fork the original on GitHub</a><br>
+    <input type='file' onchange='openFile(event)'><br>
+    File contents: <br>
+    <div id='output'>
+    ...
+    </div>
+    
    </body>
 </html>
